# Muelsyse

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
Flowing/: CMakeLists.txt  Flowing.cpp
FlowingLab/: CMakeLists.txt  EditorLayer.cpp  EditorLayer.h  ExampleLayer.cpp  ExampleLayer.h  FlowingLab.cpp  FlowingLab.h  FlowingLab2D.cpp  FlowingLab2D.h
FlowingLab/Panels/: ContentBrowserPanel.cpp  ContentBrowserPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
FlowingLab/SandBox/: ExampleLayer.cpp  FlowingLab2D.cpp  FlowingLab2D.h
FlowingTest/: imgui.ini
FlowingTest/Project/: CMakeLists.txt  FlowingTest.mproj
FlowingTest/Project/Assets/Scenes/: Physics2D.flowing  ScriptsTest.flowing
FlowingTest/Project/Assets/Scripts/: Camera.cs  Player.cs
FlowingTest/Resources/Shaders/: Renderer2D_Quad.glsl
FlowingTest/assets/scenes/: PhysicTest.flowing  PinkCude.flowing  Test.flowing  Test2.flowing
FlowingTest/assets/shaders/: Basic.frag  Basic.vert
Muelsyse/: CMakeLists.txt  Muelsyse.cpp  Muelsyse.h  Muelsyse.hpp  mulpch.cpp  mulpch.h
Muelsyse-ScriptCore/: CMakeLists.txt
Muelsyse-ScriptCore/ScriptCore/: Components.cs  Entity.cs  Input.cs  InternalCalls.cs  KeyCode.cs  Vector2.cs  Vector3.cs
Muelsyse/Core/: Application.cpp  Application.h  Application.hpp  Core.h  Core.hpp  EntryPoint.h  EntryPoint.hpp  Logger.cpp  Logger.h
Muelsyse/Event/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Muelsyse/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
Muelsyse/Input/: Input.h  KeyCode.h
Muelsyse/Input/Windows/: Input.cpp  Input.h
Muelsyse/Layer/: Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h
Muelsyse/Muelsyse/Asset/: Asset.cpp  Asset.h  AssetImporter.cpp  AssetImporter.h  AssetManager.cpp  AssetManager.h  AssetManagerBase.cpp  AssetManagerBase.h  AssetMetadata.h  EditorAssetManager.cpp  EditorAssetManager.h  RuntimeAssetManager.cpp  RuntimeAssetManager.h  TextureImporter.cpp  TextureImporter.h
Muelsyse/Muelsyse/Camera/: Camera.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h
Muelsyse/Muelsyse/Core/: Application.cpp  Application.h  Assert.h  Buffer.h  Core.h  EntryPoint.h  FileSystem.cpp  FileSystem.h  Logger.cpp  Logger.h  PlatformDetection.h  Timer.h  Timestep.h  UUID.cpp  UUID.h
Muelsyse/Muelsyse/Debug/: Instrumentor.h
Muelsyse/Muelsyse/Event/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Muelsyse/Muelsyse/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
Muelsyse/Muelsyse/Input/: Input.cpp  Input.h  KeyCode.h  MouseButtonCode.h  MouseCode.h
Muelsyse/Muelsyse/Input/Windows/: Input.cpp  Input.h
Muelsyse/Muelsyse/Layer/: Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h
Muelsyse/Muelsyse/Math/: Math.cpp  Math.h
Muelsyse/Muelsyse/Physics/: Physics2D.h
Muelsyse/Muelsyse/Project/: Project.cpp  Project.h  ProjectSerializer.cpp  ProjectSerializer.h
Muelsyse/Muelsyse/Renderer/: Buffer.cpp  Buffer.h  FrameBuffer.cpp  FrameBuffer.h  GraphicsContext.cpp  GraphicsContext.h  OrthographicCamera.cpp  OrthographicCamera.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h
Muelsyse/Muelsyse/Renderer/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFrameBuffer.cpp  OpenGLFrameBuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Muelsyse/Muelsyse/Scene/: Components.h  EditorCamera.cpp  EditorCamera.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  SceneSerializer.cpp  SceneSerializer.h  ScriptableEntity.h
Muelsyse/Muelsyse/Script/: ScriptEngine.cpp  ScriptEngine.h  ScriptGlue.cpp  ScriptGlue.h
Muelsyse/Muelsyse/UI/: UI.h
Muelsyse/Muelsyse/Utils/: Utils.h
Muelsyse/Muelsyse/Utils/Windows/: WinUtils.cpp  WinUtils.h
Muelsyse/Muelsyse/Window/: Window.cpp  Window.h
Muelsyse/Muelsyse/Window/Windows/: Window.cpp  Window.h
Muelsyse/Window/: Window.h
Muelsyse/Window/Windows/: Window.cpp  Window.h
Samples/: CMakeLists.txt  MuelsyseBox.cpp
assets/scenes/: PhysicTest.flowing  Test2.flowing
assets/shaders/: FlatColor.frag  FlatColor.vert  Texture.frag  Texture.vert
mono/Debug/: MonoPosixHelper.exp  eglib.lib  libgcmonosgen.lib  libmonoutils.lib  mono-2.0-dac-sgen.exp  mono-2.0-sgen.exp  mono-2.0-sgen.lib
mono/Release/: MonoPosixHelper.exp  eglib.lib  libgcmonosgen.lib  libmonoutils.lib  mono-2.0-dac-sgen.exp  mono-2.0-dac-sgen.lib  mono-2.0-sgen.exp  mono-2.0-sgen.lib
scripts/: CMake-all.bat
scripts/custom-ports/glad/: portfile.cmake
